# libykneomgr

./: .gitignore  .travis.yml  AUTHORS  BLURB  Makefile.am  NEWS  README  build-and-test.sh  cfg.mk  configure.ac  macosx.mk  windows.mk
build-aux/: travis
gl/: Makefile.am  des.c  des.h  des.lo  dummy.c  fseterr.c  fseterr.h  gc-gnulib.c  gc-libgcrypt.c  gc.h  printf.c  vfprintf.c
gl/m4/: gnulib-cache.m4  gnulib-comp.m4
gtk-doc/: Makefile.am  libykneomgr-docs.xml
lib/: Makefile.am  backend_globalplatform.c  backend_pcsc.c  des.c  des.h  devs.c  error.c  global.c  internal.h  version.c  ykneomgr.map  ykneomgr.pc.in
lib/ykneomgr/: Makefile.am  ykneomgr-types.h  ykneomgr-version.h.in  ykneomgr.h
src/: Makefile.am  cmdline.ggo  ykneomgr.c  ykneomgr.h2m
tests/: Makefile.am  basic.c  man-hyphen.sh
